<resources>
    <string name="app_name">BetsyJeffWordJumble</string>
    <string name="action_settings">Settings</string>
    <string name="string_play">Play</string>
    <string name="string_welcome_text">"Let's Play WordJumble!"</string>
    <string name="title_activity_game_screen">Word Jumble</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="string_pick_one">Pick one:</string>
    <string name="string_five_letter_word">5 letter word</string>
    <string name="string_six_letter_word">6 letter word</string>
</resources>
